# tower-workspace

./: .dockerignore  .gitignore  .gitmodules  CID_171_2501_validation.md  Dockerfile.backend  Dockerfile.frontend  TOWER_SDLC_POLICY.md  debug_validation.py  docker-compose.yml  export_csv.py  export_validation_results.py  export_xlsx.py  pyproject.toml  run_tower.sh  test_analyze.py  test_analyze_direct.py  test_analyze_direct_2.py  test_full_validation_integration.py  test_out.txt  test_polars.py  washington_energy_companies.csv
ladybug.libs/lib_ldbg_tower_bridge/: pyproject.toml
tower_kernel/: pyproject.toml
tower_kernel/apps/k_server/: main.py
tower_kernel/asdlc/architecture/: tdesign_kernel_data_model_000122.md  tdesign_system_blueprint_000129.md
tower_kernel/asdlc/designs/: analysis_validation_kernel_f1.md  analysis_validation_kernel_f2.md  analysis_validation_kernel_f6.md  (+6 more)
tower_kernel/instrumentation/: benchmark_eqr_ruleset.py  gpu_profile.txt  instrumentation_results.json  instrumentation_results_cpu.json  instrumentation_results_gpu.json  instrumentation_results_hybrid.json
tower_kernel/scratch/: bundle_ingestion_test.py  check_ident_cols.py  compare_schemas.py  debug_ingest.py  eqr_data_dictionary_v40.txt  extract_rules.py  final_ingest_pass.py  find_wa_entities.py  generate_json_dd.py  ingest_and_validate.py  mass_ingest.py  mass_ingest_high_volume.py  master_rebuild.py  peek_ident.py  remediation_cycle_test.py  repair_and_migrate_lake.py  repair_metadata_branding.py  research_uniqueness.py  stretch_ingest.py  test_compiler.py  test_parquet_metadata.py  test_row_count.py  test_thread_logging.py  validate_lake.py  verify_cid_sync.py  verify_composite_merger.py  verify_eqr_samples.py  verify_models.py  verify_v4_bronze.py  zip_contents.txt
tower_kernel/tests/: conftest.py  generate_compliance_test_data.py  generate_section_d_test.py  generate_section_f16_test.py  generate_section_f17_test.py  run_compliance_suite.py  run_section_d_suite.py  run_section_f16_suite.py  run_section_f17_suite.py  test_audit_agent.py  test_contract_cascades.py  test_expanded_rules.py  test_ferc_historical_ingest.py  test_filing_types.py  test_lake_rules.py  test_lookup_rules.py  test_models_v40.py  test_registry_mirror.py  test_registry_sync.py  test_services.py
(+83 files in other folders)
