[project]
name = "tower-workspace"
version = "0.1.0"
description = "TOWER Ecosystem Monorepo"
authors = [{ name = "Raynier" }]
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "tower.core",
    "tower.core/apps/api",
    "tower.core/apps/data-engine",
    "tower.core/apps/backend",
    "agent.libs/lib_market_agents",
    "ferc.libs/lib_ferc_repos",
    "xbrl.libs/lib_xbrl",
    "xbrl.libs/lib_xbrl_auditor",
    "xbrl.libs/ifrs_guidelines_parser.core"
]
