[project]
name = "tower-workspace"
version = "0.1.0"
description = "TOWER Ecosystem Monorepo"
authors = [{ name = "Raynier" }]
requires-python = ">=3.14"
dependencies = [
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "pydantic>=2.13.1",
    "python-multipart",
    "requests",
]

[tool.uv.workspace]
members = [
    "tower_core",
    "tower_core/apps/api",
    "tower_core/apps/data-engine",
    "tower_core/apps/backend",
    "agent.libs/lib_market_agents",
    "ferc.libs/lib_ferc_repos",
    "xbrl.libs/lib_xbrl",
    "xbrl.libs/lib_xbrl_auditor",
    "tower_kernel",
    "ladybug.libs/lib_ldbg_tower_bridge"
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
