[project]
name = "tower-kernel"
version = "0.1.0"
description = "TOWER High-Performance Parquet Kernel (Standard Python 3.14 + GPU)"
authors = [{ name = "Raynier" }]
requires-python = ">=3.14"
dependencies = [
    "polars",
    "pyarrow",
    "pydantic",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tower_kernel"]
