[project]
name = "lib-ldbg-tower-bridge"
version = "0.1.0"
description = "Bridge between LadybugDB and TOWER System"
authors = [{ name = "Antigravity" }]
requires-python = ">=3.14"
dependencies = [
    "polars",
    "pyarrow",
    "requests",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lib_ldbg_tower_bridge"]
